--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,5 +24,11 @@
     <bool name="doze_display_state_supported">true</bool>
 
     <!-- the padding on the top of the statusbar (usually 0) -->
-    <dimen name="status_bar_padding_top">8dp</dimen>
+    <dimen name="status_bar_padding_top">0dp</dimen>
+
+    <!-- the padding on the start of the statusbar (usually 0) -->
+    <dimen name="status_bar_padding_start">8dp</dimen>
+
+    <!-- the padding on the end of the statusbar (usually 0) -->
+    <dimen name="status_bar_padding_end">8dp</dimen>
 </resources>
