--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -18,6 +18,9 @@
 -->
 
 <resources>
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
+
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
@@ -170,7 +173,6 @@
     <string-array translatable="false" name="radioAttributes">
         <item>1,1</item>
         <item>0,1</item>
-        <item>7,1</item>
     </string-array>
 
     <!-- Flag indicating whether we should enable the automatic brightness.
@@ -199,31 +201,17 @@
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
         <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
         <item>5</item>
-        <item>10</item>
-        <item>15</item>
-        <item>20</item>
-        <item>25</item>
+        <item>6</item>
         <item>50</item>
         <item>100</item>
-        <item>300</item>
         <item>500</item>
-        <item>1000</item>
-        <item>2000</item>
-        <item>2999</item>
+        <item>1500</item>
         <item>3000</item>
-        <item>4000</item>
+        <item>4999</item>
         <item>5000</item>
-        <item>6000</item>
-        <item>7000</item>
-        <item>8000</item>
-        <item>9000</item>
-        <item>10000</item>
+        <item>19999</item>
         <item>20000</item>
-        <item>40000</item>
     </integer-array>
 
     <!-- An array describing the screen's backlight values corresponding to the brightness
@@ -486,6 +474,57 @@
         <item>253</item>
         <item>254</item>
         <item>255</item>
+	<item>256</item>
+	<item>257</item>
+	<item>258</item>
+	<item>259</item>
+	<item>260</item>
+	<item>261</item>
+	<item>262</item>
+	<item>263</item>
+	<item>264</item>
+	<item>265</item>
+	<item>266</item>
+	<item>267</item>
+	<item>268</item>
+	<item>269</item>
+	<item>270</item>
+	<item>271</item>
+	<item>272</item>
+	<item>273</item>
+	<item>274</item>
+	<item>275</item>
+	<item>276</item>
+	<item>277</item>
+	<item>278</item>
+	<item>279</item>
+	<item>280</item>
+	<item>281</item>
+	<item>282</item>
+	<item>283</item>
+	<item>284</item>
+	<item>285</item>
+	<item>286</item>
+	<item>287</item>
+	<item>288</item>
+	<item>289</item>
+	<item>290</item>
+	<item>291</item>
+	<item>292</item>
+	<item>293</item>
+	<item>294</item>
+	<item>295</item>
+	<item>296</item>
+	<item>297</item>
+	<item>298</item>
+	<item>299</item>
+	<item>300</item>
+	<item>301</item>
+	<item>302</item>
+	<item>303</item>
+	<item>304</item>
+	<item>305</item>
+	<item>306</item>
     </integer-array>
 
     <!-- Array of desired screen brightness in nits corresponding to the lux values
@@ -821,6 +860,16 @@
          rates are available from hardware composer. Only has an effect if the value is
          non-zero. -->
     <integer name="config_defaultPeakRefreshRate">120</integer>
+
+    <!-- The default refresh rate for a given device. Change this value to set a higher default
+         refresh rate. If the hardware composer on the device supports display modes with a higher
+         refresh rate than the default value specified here, the framework may use those higher
+         refresh rate modes if an app chooses one by setting preferredDisplayModeId or calling
+         setFrameRate().
+         If a non-zero value is set for config_defaultPeakRefreshRate, then
+         config_defaultRefreshRate may be set to 0, in which case the value set for
+         config_defaultPeakRefreshRate will act as the default frame rate. -->
+    <integer name="config_defaultRefreshRate">0</integer>
 
     <!-- When true use the linux /dev/input/event subsystem to detect the switch changes
          on the headphone/microphone jack. When false use the older uevent framework. -->
